Make all CRUD tests authorized, update fixutres.
ASSUMPTIONS
===========
- TODO

CONSIDERATIONS
==============
- TODO

BUGS FOUND
==========
- FIXME turns out that instantiated classes inheriting from
  GlobalSecondaryIndex are not unique in their instantiation. They use a
  meta class to bind the index to whichever Model it is last
  instantiated in.
