# bulb_api/handlers.py
@@ -27,8 +27,8 @@ def list_organizations(offset=0, limit=None):
     return list_entity(Organization, offset, limit)
 
 
-def create_organization(body):
-    return create_entity(Organization, body)
+def create_organization(body, org_id=None):
+    return create_entity(Organization, body, entity_id=org_id, org_id=org_id)
 
 
 def get_document(doc_id):
@@ -47,8 +47,8 @@ def list_documents(offset=0, limit=None):
     return list_entity(Document, offset, limit)
 
 
-def create_document(body):
-    return create_entity(Document, body)
+def create_document(body, org_id=None):
+    return create_entity(Document, body, org_id=org_id)
 
 
 def get_user(user_id):
@@ -85,11 +85,28 @@ def create_user(body, user_id=None):
     except AssertionError:                  # user specified invalid password.
         return 'Invalid password!', 400
     body['password_hash'] = hash_password(password)
-    body['org_id'] = Organization.get_unused_uuid()  # 1:1 user -> org
+    user_id = User.get_unused_uuid()
+    org_id = Organization.get_unused_uuid()     # 1:1 user->org
+    org_data = {'users': [user_id]}
+    res, code = create_organization(org_data, org_id=org_id)
+    if code != 201:
+        raise BulbException('Failed to create Organization - code: {} msg: {}'
+                            .format(str(code), str(res)))
+    return create_entity(User, body, entity_id=user_id, org_id=org_id)
+
+
+def init_user(user_id):
+    try:
+        user = User.get(user_id)
+    except:
+        raise BulbException('Failed to get user {}!'.format(user_id))
+    org_id = user.org_id
     for task_body in DEFAULT_TASKS:
-        task_body['org_id'] = body['org_id']
-        create_task(task_body)
-    return create_entity(User, body, entity_id=user_id)
+        res, code = create_task(task_body, org_id=org_id)
+        if code != 201:
+            raise BulbException('Failed mk Task - code: {} msg: {} task: {}'
+                                .format(str(code), str(res), str(task_body)))
+    return clean_response(user.to_dict()), 201
 
 
 def get_resource(res_id):
@@ -108,8 +125,8 @@ def list_resources(offset=0, limit=None):
     return list_entity(Resource, offset, limit)
 
 
-def create_resource(body):
-    return create_entity(Resource, body)
+def create_resource(body, org_id=None):
+    return create_entity(Resource, body, org_id=org_id)
 
 
 def get_task(task_id):
@@ -128,60 +145,78 @@ def list_tasks(offset=0, limit=None):
     return list_entity(Task, offset, limit)
 
 
-def create_task(body):
+def create_task(body, org_id=None):
     """ TODO: use pynamodb's `batch_write` mechanism here. """
-    return create_entity(Task, body)
+    return create_entity(Task, body, org_id=org_id)
 
 
 def clean_response(body):
     return dict([(k, v) for (k, v) in body.iteritems()
-                                 if k not in HIDDEN_ATTRIBUTES])
+                                 if k not in HIDDEN_ATTRIBUTES
+                                    and v is not None])
 
 
-def get_uid_gid_pair():
-    return flask.request.token_info['uid'], flask.request.token_info['gid']
+def get_uid():
+    try:
+        return flask.request.token_info.get('uid')
+    except (AttributeError, RuntimeError):
+        return None
+
+
+def get_gid():
+    try:
+        return flask.request.token_info.get('gid')
+    except (AttributeError, RuntimeError):
+        return None
 
 
 def get_org_scoped_models():
-    """ Get list of models with `org_id` attr, should have OrgIndex too. """
-    return filter(lambda m: hasattr(m, 'org_id'), BulbModel.__subclasses__())
+    """ Get list of models OrgIndex (models with attr named 'org_index'). """
+    # TODO: be more precise than this. filtering on property name is dangerous
+    return filter(lambda m: hasattr(m, 'org_index'),
+                  BulbModel.__subclasses__())
 
 
 def check_ownership(model, entity_id):
-    uid, gid = get_uid_gid_pair()
-    if model not in get_org_scoped_models():
-        return None, None
-    elif uid == MASTER_KEY_UID and gid == MASTER_KEY_GID:
+    uid, gid = get_uid(), get_gid()
+    if uid == MASTER_KEY_UID and gid == MASTER_KEY_GID:
         return uid, gid
     try:
         entity = model.get(entity_id)
     except model.DoesNotExist:
-        return NoContent, 404
+        raise ProblemException(status=404, title='Not Found')
     try:
         detail = 'not authorized to access this resource'
         if entity.org_id != gid:
             raise ProblemException(status=403, title='Not Authorized',
                                                detail=detail)
-        elif model is User and entity.user_id != uid:
+        elif model is User and entity_id != uid:
             raise ProblemException(status=403, title='Not Authorized',
                                                detail=detail)
     except AttributeError as e:
-        raise ProblemException(status=401, title='Unauthorized')
+        raise ProblemException(status=401, title='Unauthorized',
+                                           detail=e.message())
     return uid, gid
 
 
-def create_entity(model, body, entity_id=None):
+def create_entity(model, body, entity_id=None, org_id=None):
     """ A generic function for creating a bulb Entity.
 
     NOTE: entity_id should be used for testing ONLY. In normal operation, we
     generate and assign the entity_id here.
     """
     if not issubclass(model, BulbModel):
-        raise BulbException('`model` must be subclass of BulbModel!')
+        raise BulbException('Model {} must be subclass of BulbModel!'
+                            .format(model.__name__))
     if model().get_hash_key_name() in body.keys():
         return 'Cannot specify hash_key in POST body!', 400
+    if Organization().get_hash_key_name() in body.keys():
+        return 'Cannot specify org_id in POST body!', 400
     entity = model(hash_key=entity_id if entity_id
                                       else model.get_unused_uuid())
+    # if applicable, use org_id if specified, falling back to auth'd "gid"
+    if model in get_org_scoped_models():
+        entity.org_id = org_id if org_id else get_gid() if get_gid() else None
     entity.create_datetime = datetime.utcnow()
     try:
         entity.update_from_dict(body)
@@ -196,7 +231,8 @@ def create_entity(model, body, entity_id=None):
 
 def get_entity(model, entity_id):
     if not issubclass(model, BulbModel):
-        raise BulbException('`model` must be subclass of BulbModel!')
+        raise BulbException('Model {} must be subclass of BulbModel!'
+                            .format(model.__name__))
     check_ownership(model, entity_id)
     try:
         entity = model.get(entity_id).to_dict()
@@ -207,7 +243,8 @@ def get_entity(model, entity_id):
 
 def list_entity(model, offset, limit):
     if not issubclass(model, BulbModel):
-        raise BulbException('`model` must be subclass of BulbModel!')
+        raise BulbException('Model {} must be subclass of BulbModel!'
+                            .format(model.__name__))
     # TODO: this is pretty unscalable... :(
     # b/c pynamo represents index/models query/scan results as iterators, we're
     # going to have to manually iterate over the totality of that iterator
@@ -215,16 +252,14 @@ def list_entity(model, offset, limit):
     # list. see:
     # https://stackoverflow.com/questions/39671167/index-into-a-python-iterator
     # https://github.com/pynamodb/PynamoDB/pull/48
-    user_id, org_id = get_uid_gid_pair()
+    uid, gid = get_uid(), get_gid()
     entities = None
-    if user_id == MASTER_KEY_UID and org_id == MASTER_KEY_GID:
+    if uid == MASTER_KEY_UID and gid == MASTER_KEY_GID:
         entities = [entity.to_dict() for entity in model.scan()]
     elif model is Organization:
-        entities = [entity.get(org_id).to_dict()]
-    elif model in get_org_scoped_models():
-        entities = [ent.to_dict() for ent in model.org_index.query(org_id)]
-    else:
-        entities = [entity.to_dict() for entity in model.scan()]
+        entities = [model.get(gid).to_dict()]
+    elif model in get_org_scoped_models() or model is User:
+        entities = [ent.to_dict() for ent in model.org_index.query(gid)]
     if offset > len(entities):
         return 'Offset larger than number of available entities!', 400
     try:
@@ -236,12 +271,12 @@ def list_entity(model, offset, limit):
 
 
 def update_entity(model, entity_id, body):
-    # TODO make decorator for custom input validation?
-    # TODO: [URGENT] need to strip out un-touchables (create_datetime, *_id,
+    # TODO: [URGENT] need to strip out immutable attrs (create_datetime, *_id,
     # etc.)
     if not issubclass(model, BulbModel):
-        raise BulbException('`model` must be subclass of BulbModel!')
-    check_ownership(model, entity_id)
+        raise BulbException('Model {} must be subclass of BulbModel!'
+                            .format(model.__name__))
+    _, gid = check_ownership(model, entity_id)
     entity_id_key = model().get_hash_key_name()
     if entity_id_key in body.keys():
         if body[entity_id_key] != entity_id:
@@ -249,6 +284,8 @@ def update_entity(model, entity_id, body):
             return msg.format(model_name=model.__name__), 400
         else:
             del body[model().get_hash_key_name()]
+    if 'org_id' in body.keys() and gid and gid != body['org_id']:
+        return 'Specified org_id doesn\'t match user\'s gid!', 400
     try:
         entity = model.get(entity_id)
     except model.DoesNotExist:
@@ -266,7 +303,8 @@ def update_entity(model, entity_id, body):
 
 def delete_entity(model, entity_id):
     if not issubclass(model, BulbModel):
-        raise BulbException('`model` must be subclass of BulbModel!')
+        raise BulbException('Model {} must be subclass of BulbModel!'
+                            .format(model.__name__))
     check_ownership(model, entity_id)
     try:
         model.get(entity_id).delete()
